# Shauryas_RoboVision_Takneek25

./: Screencast from 27-08-25 12:21:25 AM IST.webm  Screencast from 27-08-25 12:22:26 AM IST.webm  Screencast from 27-08-25 12:30:28 AM IST.webm  readme.md
scripts/: build_pointcloud.py
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/urdf/: my_robot.urdf  myrobot.xacro  robot.gazebo
src/my_robot_description/worlds/: barrel.world
src/vision_recon/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/vision_recon/launch/: full_scan_launch.py
src/vision_recon/vision_recon/: camera_saver.py  move_and_capture.py
